Add bootstrap gulp configuration

--- a/css-boilerplate/scss/style.scss
+++ b/css-boilerplate/scss/style.scss
@@ -1,13 +1,13 @@
 /*
 Theme Name: Platicas con Dona Flor
-Author: Erick Bamaca for custom design integration | Bryan Hadaway for core base
+Author: Erick Bamaca @bamacaerick for custom design integration | Bryan Hadaway for core base | Estudio Dual for design
 Description: A fully responsive, SEO-friendly, Schema-ready, Accessibility-ready, based on Bootstrap 5.1 Grid and utilities.
 Tags: accessibility-ready, one-column, two-columns, right-sidebar, custom-logo, custom-menu, featured-images, microformats, sticky-post, threaded-comments, translation-ready, blog, e-commerce, portfolio
 Version: 1.0.0
 Requires PHP: 7.0
 */
 
-@import 'bootstrap.min';
+@import 'bootstrap';
 @import 'config'; // Override bootstrap variables values
 @import 'wpeditor';
 @import 'mixins';
