--- a/css-boilerplate/scss/theme/global/_variables.scss
+++ b/css-boilerplate/scss/theme/global/_variables.scss
@@ -10,6 +10,9 @@
 	--dark: #28292c;
 	--info: #0dcaf0;
 	--body: #ffffff;
+    --pink: #FF7087;
+    --blue: #08B6CB;
+    --green: #7BC70F;
 	
 	--primary:#6E2995;
     --primary-variant: #3A3087;
