--- a/css-boilerplate/scss/style.scss
+++ b/css-boilerplate/scss/style.scss
@@ -3,7 +3,7 @@ Theme Name: Platicas con Dona Flor
 Author: Erick Bamaca @bamacaerick for custom design integration | Bryan Hadaway for core base | Estudio Dual for design
 Description: A fully responsive, SEO-friendly, Schema-ready, Accessibility-ready, based on Bootstrap 5.1 Grid and utilities.
 Tags: accessibility-ready, one-column, two-columns, right-sidebar, custom-logo, custom-menu, featured-images, microformats, sticky-post, threaded-comments, translation-ready, blog, e-commerce, portfolio
-Version: 1.0.1
+Version: 1.0.2
 Requires PHP: 7.0
 */
 
@@ -17,3 +17,5 @@ Requires PHP: 7.0
 @import 'theme/global/index';
 @import 'theme/layout/index';
 @import 'theme/components/index';
+@import 'theme/sections/index';
+@import 'theme/pages/index';
