--- a/css-boilerplate/scss/theme/components/_testimonial-three.scss
+++ b/css-boilerplate/scss/theme/components/_testimonial-three.scss
@@ -12,48 +12,26 @@
     top: 20%;
     right: -30%;
     .single-testimonial-three {
-      width: 350px;
+      width: 250px;
       position: absolute;
       right: 20%;
       border-radius: 10px;
-      background-color: var(--white);
+      background-color: var(--primary);
+      color: var(--white);
       box-shadow: 0px 4px 40px -10px rgba(0, 0, 0, 0.15);
       padding: 20px;
-      .client-info {
-        display: flex;
-        gap: 15px;
-        align-items: center;
-        margin-top: 15px;
-        .client-image {
-          width: 50px;
-          height: 50px;
-          img {
-            width: 100%;
-            border-radius: 50%;
-          }
-        }
-        .client-details {
-          .name {
-            font-size: 18px;
-            font-weight: 600;
-            color: var(--primary-title);
-            margin-bottom: 5px;
-            font-family: "open sans";
-            line-height: 16px;
-            @media #{$xs-to-md-max} {
-              font-size: 16px;
-            }
-          }
+
+      &-text {
+        color: var(--white);
+      }
   
-          .location {
-            font-size: 14px;
-            font-weight: 400;
-            color: var(--tertiary-title);
-            font-family: "inter";
-            @media #{$xs-to-md-max} {
-              font-size: 14px;
-            }
-          }
+      .location {
+        font-size: 14px;
+        font-weight: 400;
+        color: var(--tertiary-title);
+        font-family: "inter";
+        @media #{$xs-to-md-max} {
+          font-size: 14px;
         }
       }
   
@@ -99,11 +77,10 @@
       position: absolute;
       bottom: 8px;
       width: 100%;
+      list-style-type: none;
       @media #{$xs-to-md-max} {
         bottom: 10px;
       }
-
-      list-style-type: none;
       li {
         margin: 0 0.25rem;
       }
@@ -120,7 +97,7 @@
       .slick-active button {
         width: 25px;
         height: 6px;
-        background-color: var(--primary);
+        background-color: var(--secondary);
       }
     }
   }
