--- a/css-boilerplate/scss/theme/global/_utilities.scss
+++ b/css-boilerplate/scss/theme/global/_utilities.scss
@@ -10,4 +10,30 @@
     &-secondary {
         color: var(--secondary)!important;
     }
+
+    &-green {
+        color: var(--green)!important;
+    }
+}
+
+.bg {
+    &-primary {
+        background-color: var(--primary)!important;
+
+        &-variant {
+            background-color: var(--primary-variant)!important;
+        }
+    }
+
+    &-secondary {
+        background-color: var(--secondary)!important;
+    }
+
+    &-green {
+        background-color: var(--green)!important;
+    }
+
+    &-blue {
+        background-color: var(--blue)!important;
+    }
 }
