Add all pendings for home

--- a/css-boilerplate/scss/theme/global/_utilities.scss
+++ b/css-boilerplate/scss/theme/global/_utilities.scss
@@ -36,4 +36,8 @@
     &-blue {
         background-color: var(--blue)!important;
     }
+
+    &-white {
+        background-color: var(--white)!important;
+    }
 }
