--- a/css-boilerplate/scss/theme/components/_about.scss
+++ b/css-boilerplate/scss/theme/components/_about.scss
@@ -1,4 +1,9 @@
 
+  .about-cards-content {
+    position: relative;
+    z-index: 5;
+  }
+
   .about-info {
     .info-icon {
       min-width: 52px;
@@ -14,7 +19,32 @@
         font-size: 20px;
       }
     }
+    .info-toggle {
+      border: 0;
+      background-color: transparent;
+      padding: 0;
+      &::before {
+        content: "";
+        background-image: url("./images/icons/plus-icon.svg");
+        background-repeat: no-repeat;
+        background-position: left bottom;
+        background-size: 20px;
+        display: inline-block;
+        width: 30px;
+        height: 20px;
+        padding-right: 10px;
+        bottom: -2px;
+        position: relative;
+      }
+
+      &.active::before {
+        content: "";
+        background-image: url("./images/icons/minus-icon.svg");
+        padding-right: 8px;
+      }
+    }
     .info-content {
+      padding-top: 10px;
       .title {
         font-size: 20px;
         font-weight: 700;
@@ -24,11 +54,14 @@
           font-size: 16px;
         }
       }
+      
       .para {
+        
         font-size: 16px;
         font-weight: 400;
         line-height: 25px;
         color: var(--tertiary-title);
+
         @media #{$xs-to-md-max} {
           font-size: 14px;
         }
@@ -41,6 +74,12 @@
       height: 1px;
       width: 100%;
     }
+    .info-toggle-content {
+        display: none;
+        &.active {
+          display: block;
+        }
+      }
 
     &-image {
       position: absolute;
@@ -52,6 +91,7 @@
       padding: 35px;
       border-radius: 15px;
       box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+      background-color: var(--white);
 
       &:hover {
         background-color: var(--primary-variant);
