--- a/css-boilerplate/scss/theme/components/_gallery.scss
+++ b/css-boilerplate/scss/theme/components/_gallery.scss
@@ -3,7 +3,7 @@
   .gallery-img {
     position: relative;
     &::before {
-      content: "\eeaf"; 
+      content: "\eeaf";
       font-family: "RemixIcon";
       position: absolute;
       top: 50%;
@@ -13,7 +13,7 @@
       color: var(--secondary);
       opacity: 1;
       z-index: 1;
-      transition: .3s;
+      transition: 0.3s;
       opacity: 0;
       visibility: hidden;
     }
@@ -32,7 +32,7 @@
       );
       opacity: 0;
       visibility: hidden;
-      transition: .3s;
+      transition: 0.3s;
     }
     &:hover {
       cursor: pointer;
@@ -47,19 +47,18 @@
       }
     }
   }
-  .gallery-slider{
-
+  .gallery-slider {
     .slick-slide {
-        margin: 0 10px;
-        img{
-          width: 100%;
-          height: 100%;
-        }
+      margin: 0 10px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
-  
+
     /* the parent */
     .slick-list {
-        margin: 0 -10px;
+      margin: 0 -10px;
     }
 
     .slick-dots {
@@ -95,4 +94,63 @@
       }
     }
   }
+}
+
+.podcast-gallery {
+  &-data {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 0 40px 10px 40px;
+
+    @media #{$md} {
+      padding: 0 80px 10px 60px;
+    }
+
+    &-episode {
+      color: var(--white);
+      background-color: var(--primary-variant);
+      font-size: 14px;
+      display: inline-block;
+      border-top-right-radius: 12px;
+      border-bottom-right-radius: 12px;
+      padding: 5px 20px 5px 10px;
+    }
+
+    &-title {
+      font-size: 14px;
+      color: var(--primary-variant);
+    }
+  }
+}
+
+@-webkit-keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+    -ms-transform: translateY(20px);
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  animation-name: fadeInUp;
 }
