--- a/css-boilerplate/scss/theme/components/_helpful_card.scss
+++ b/css-boilerplate/scss/theme/components/_helpful_card.scss
@@ -6,12 +6,12 @@
   box-shadow: 0px 4px 40px -10px rgba(0, 0, 0, 0.15);
   @include transition(0.3s);
   &:hover {
-    background-color: var(--secondary);
+    background-color: var(--pink);
     cursor: pointer;
     .helpful-card-icon {
       background-color: white!important;
       i {
-        color: var(--secondary);
+        color: var(--pink);
       }
     }
     .helpful-card-caption {
@@ -20,6 +20,64 @@
       }
       .caption-para {
         color: var(--white);
+      }
+    }
+  }
+
+  .card-wrapper-two & {
+    &:hover {
+      background-color: var(--primary);
+      .helpful-card-icon {
+        background-color: white!important;
+        i {
+          color: var(--primary);
+        }
+      }
+      .helpful-card-caption {
+        .caption-title {
+          color: white!important;
+        }
+        .caption-para {
+          color: var(--white);
+        }
+      }
+    }
+  }
+  .card-wrapper-three & {
+    &:hover {
+      background-color: var(--blue);
+      .helpful-card-icon {
+        background-color: white!important;
+        i {
+          color: var(--blue);
+        }
+      }
+      .helpful-card-caption {
+        .caption-title {
+          color: white!important;
+        }
+        .caption-para {
+          color: var(--white);
+        }
+      }
+    }
+  }
+  .card-wrapper-four & {
+    &:hover {
+      background-color: var(--green);
+      .helpful-card-icon {
+        background-color: white!important;
+        i {
+          color: var(--green);
+        }
+      }
+      .helpful-card-caption {
+        .caption-title {
+          color: white!important;
+        }
+        .caption-para {
+          color: var(--white);
+        }
       }
     }
   }
