Add contact and blog styles

--- a/css-boilerplate/scss/theme/global/_variables.scss
+++ b/css-boilerplate/scss/theme/global/_variables.scss
@@ -11,7 +11,7 @@
 	--info: #0dcaf0;
 	--body: #ffffff;
     --pink: #FF7087;
-    --blue: #08B6CB;
+    --blue: #11cdef;
     --green: #7BC70F;
 	
 	--primary:#6E2995;
