--- a/css-boilerplate/scss/theme/sections/_pagination.scss
+++ b/css-boilerplate/scss/theme/sections/_pagination.scss
@@ -1,5 +1,8 @@
-.pagination-nav {
-    margin-top: 60px;
+
+.pagination-nav,
+.wp-pagenavi {
+  $navigation: &;  
+  margin-top: 60px;
   
     .pagination {
       gap: 10px;
@@ -26,7 +29,7 @@
             font-size: 16px;
           }
           &:hover {
-            background-color: var(--primary);
+            background-color: var(--blue);
             border: 1px solid transparent;
             color: var(--white);
             i {
@@ -45,7 +48,7 @@
             }
           }
           &.active{
-             background-color: var(--primary);
+             background-color: var(--blue);
              color: var(--white);
              border: none;
           }
@@ -53,6 +56,59 @@
       }
     }
   }
+
+  .wp-pagenavi {
+        position: relative; // Add a relative position to create a stacking context
+        gap: 10px;
+        display: flex;
+  padding-left: 0;
+  list-style: none;
+        span,
+        a {
+          width: 50px;
+          min-width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          background-color: transparent;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: var(--primary-title);
+          font-size: 18px;
+          font-weight: 400;
+          border: 1px solid var(--primary-gray);
+          @media #{$xs}{
+            width: 40px;
+            min-width: 40px;
+            height: 40px;
+            font-size: 16px;
+          }
+          &:hover {
+            background-color: var(--blue);
+            border: 1px solid transparent;
+            color: var(--white);
+            i {
+              color: var(--white);
+            }
+          }
+  
+          // Select the last .page-link within each .page-item
+          &.nextpostslink {
+            width: 70px;
+            height: 50px;
+            border-radius: 30px;
+            @media #{$xs}{
+              width: 60px;
+              height: 40px;
+            }
+          }
+          &.current{
+             background-color: var(--blue);
+             color: var(--white);
+             border: none;
+          }
+        }
+      }
   
 
   .page-link:focus {
