Update header and footer single menu active

--- a/css-boilerplate/scss/theme/layout/_footer.scss
+++ b/css-boilerplate/scss/theme/layout/_footer.scss
@@ -39,6 +39,7 @@
     .listing {
       display: flex;
     }
+    @at-root body.single-post .footer-menu .menu-item-blog, 
     .single-list.current-menu-item {
       .single {
         color: var(--secondary);
