--- a/style.css
+++ b/style.css
@@ -28529,8 +28529,21 @@ body.single-post .footer-menu .menu-item-blog .single,
   border-radius: 5px;
   font-size: 14px;
 }
+.footer-wrapper .footer-imp-link .footer-link .imp-link .single-list .project-post {
+  flex-direction: row;
+}
 .footer-wrapper .footer-imp-link .footer-link .imp-link .single-list .project-img {
+  flex: 0 0 auto;
+  width: 100px;
   border-radius: 10px;
+  overflow: hidden;
+  height: 80px;
+}
+.footer-wrapper .footer-imp-link .footer-link .imp-link .single-list .project-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .footer-wrapper .footer-imp-link .footer-link .imp-link .single-list .project-info .project-date {
   font-size: 16px;
@@ -28546,16 +28559,11 @@ body.single-post .footer-menu .menu-item-blog .single,
   }
 }
 .footer-wrapper .footer-imp-link .footer-link .imp-link .single-list .project-info .project-title {
-  font-size: 20px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  line-height: 30px;
+  line-height: 120%;
   color: var(--white);
-}
-@media (max-width: 767px) {
-  .footer-wrapper .footer-imp-link .footer-link .imp-link .single-list .project-info .project-title {
-    font-size: 16px;
-  }
 }
 .footer-wrapper .footer-imp-link .footer-link .imp-link .single-list .project-info .project-title a:hover {
   color: var(--secondary);
