--- a/css-boilerplate/scss/_wpeditor.scss
+++ b/css-boilerplate/scss/_wpeditor.scss
@@ -21,9 +21,16 @@
   text-align: left;
   line-height: 130%;
 }
+.wp_editor_content ul,
+.wp_editor_content ol {
+	li {
+		line-height: 130%;
+		margin-bottom: 2px;
+	}
+}
 
-.wp_editor_content ul{
-  list-style-type: unset;
+.wp_editor_content ul li{
+	list-style-type: disc;
 }
 
 .wp_editor_content a{
