--- a/css-boilerplate/scss/theme/components/_testimonial-three.scss
+++ b/css-boilerplate/scss/theme/components/_testimonial-three.scss
@@ -7,6 +7,14 @@
       }
     }
   }
+  .section-tittle {
+    .pera,
+    .pera p {
+      font-size: 16px;
+        font-weight: 400;
+        color: var(--tertiary-title);
+    }
+  }
   .position-card{
     position: absolute;
     top: 20%;
@@ -35,7 +43,8 @@
         }
       }
   
-      .pera {
+      .pera, 
+      .pera p {
         font-size: 16px;
         font-weight: 400;
         color: var(--tertiary-title);
