--- a/css-boilerplate/scss/theme/layout/_hero-two.scss
+++ b/css-boilerplate/scss/theme/layout/_hero-two.scss
@@ -63,7 +63,8 @@
       }
     }
   
-    .pera {
+    .pera, 
+    .pera p {
       font-size: 16px;
       display: block;
       margin-bottom: 30px;
