--- a/css-boilerplate/scss/theme/global/_variables.scss
+++ b/css-boilerplate/scss/theme/global/_variables.scss
@@ -43,6 +43,7 @@
 	--tertiary-paragraph:#787787;
 
 	--primary-btn:#FF7500;
+    --primary-variant-btn: #3A3087;
 	--secondary-btn:#FFD502;
 	--tertiary-btn:#090E0D;
 
